--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,5 +6,7 @@ include COPYRIGHT
 include LICENSE
 include tryton.cfg
 include *.xml
+include *.odt
+include view/*.xml
 include locale/*.po
 include doc/*
