Added extras depend of sale_shipment_cost on views

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -14,6 +14,8 @@ depends:
     sale
     sale_price_list
     sale_shop
+extras_depend:
+    sale_shipment_cost
 xml:
     configuration.xml
     sale.xml
