Split sale_pos module into two modules: sale_pos and sale_payment

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -3,22 +3,9 @@ version=3.2.0
 depends:
     ir
     res
-    party
-    product
-    product_barcode
-    account
-    account_product
-    account_invoice
-    account_statement
-    stock
-    sale
-    sale_price_list
-    sale_shop
-extras_depend:
-    sale_shipment_cost
+    sale_invoice_grouping
+    sale_payment
 xml:
     configuration.xml
     sale.xml
     shop.xml
-    device.xml
-    user.xml
