--- a/tryton.cfg
+++ b/tryton.cfg
@@ -5,6 +5,8 @@ depends:
     res
     sale_invoice_grouping
     sale_payment
+extras_depend:
+    sale_shipment_cost
 xml:
     configuration.xml
     sale.xml
