Add extras depend to sale.sale of sale_payment_type

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -6,6 +6,7 @@ depends:
     sale_invoice_grouping
     sale_payment
 extras_depend:
+    sale_payment_type
     sale_shipment_cost
 xml:
     configuration.xml
