Move prices with tax to sale_w_tax module

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     res
     sale_invoice_grouping
     sale_payment
+    sale_w_tax
 extras_depend:
     sale_payment_type
     sale_shipment_cost
