Add extra dependes with discount formula modules, to have the sale_discount_formula field in the sale pos form view.
Task: #173901

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -9,6 +9,7 @@ depends:
 extras_depend:
     sale_payment_type
     sale_shipment_cost
+    discount_formula
 xml:
     configuration.xml
     sale.xml
